@@ -34,11 +34,12 @@
 ;; Probably this entire thing should be obsolete.
 ;; It's only used to init nnspool-spool-directory, so why not just
 ;; set that variable's default directly?
-(defvar news-directory (if (file-exists-p "/usr/spool/news/")
-			   "/usr/spool/news/"
-			 "/var/spool/news/")
-  "The root directory below which all news files are stored.")
-(defvaralias 'news-path 'news-directory)
+(eval-and-compile
+  (defvar news-directory (if (file-exists-p "/usr/spool/news/")
+			     "/usr/spool/news/"
+			   "/var/spool/news/")
+    "The root directory below which all news files are stored.")
+  (defvaralias 'news-path 'news-directory))
 
 ;; Ditto re obsolescence.
 (defvar news-inews-program
